IOT接收和发送webSocket

--- a/uni.scss
+++ b/uni.scss
@@ -21,13 +21,12 @@ $uni-color-warning: #f0ad4e;
 $uni-color-error: #dd524d;
 $uni-color-stey: #5a2b81;
 $uni-color-stey-disabled: rgba(90, 43, 129, 0.6);
+$uni-color-bgc: #fafafa;
+$uni-color-nav: #ffffff;
 
 /* 文字基本颜色 */
-$uni-text-color:#333;//基本色
-$uni-text-color-inverse:#fff;//反色
-$uni-text-color-grey:#999;//辅助灰色，如加载更多的提示信息
-$uni-text-color-placeholder: #808080;
-$uni-text-color-disable:#c0c0c0;
+$uni-text-color:#4a4a4a;//基本色
+$uni-text-color-grey:#9b9b9b;//辅助灰色，如加载更多的提示信息
 
 /* 背景颜色 */
 $uni-bg-color:#ffffff;
